# aputils

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
include/: apu_array.hpp  apu_audioprocessingunit.hpp  apu_file.hpp  apu_host.hpp  apu_loader.hpp  apu_logger.hpp  apu_mod.hpp  apu_number.hpp  apu_obj.hpp  apu_obj_enum.hpp  apu_objmap.hpp  apu_osc.hpp  apu_pahost.hpp  apu_parameter.hpp  apu_parametermap.hpp  apu_str.hpp  apu_thread_manager.hpp  aputils.h  autil_array.hpp  autil_audioprocessingunit.hpp  autil_dspkernel.hpp  autil_file.hpp  autil_host.hpp  autil_logger.hpp  autil_manager.hpp  autil_mod.hpp  autil_number.hpp  autil_obj.hpp  autil_obj_enum.hpp  autil_objmap.hpp  autil_osc.hpp  autil_pahost.hpp  autil_parameter.hpp  autil_parametermap.hpp  autil_str.hpp  autil_stringlist.hpp  autil_thread_manager.hpp  portaudio_host.hpp
libaputils.xcodeproj/: project.pbxproj
libaputils.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libaputils.xcodeproj/project.xcworkspace/xcuserdata/Luke.xcuserdatad/: UserInterfaceState.xcuserstate
scripts/: docs.sh
src/: apu_audioprocessingunit.cpp  apu_audioprocessingunit_private.hpp  apu_defaultlogger.cpp  apu_file.cpp  apu_file_private.hpp  apu_loader.cpp  apu_logger_private.hpp  apu_number.cpp  apu_obj.cpp  apu_osc.cpp  apu_osc_private.hpp  apu_pahost.cpp  apu_pahost_private.hpp  apu_parameter.cpp  apu_parameter_private.hpp  apu_parametermap.cpp  apu_parametermap_private.hpp  apu_str.cpp  apu_str_private.hpp  apu_thread_manager.cpp  aputils.cpp  autil_audioprocessingunit.cpp  autil_audioprocessingunit_private.hpp  autil_defaultlogger.cpp  autil_dspkernel.cpp  autil_file.cpp  autil_file_private.hpp  autil_logger_private.hpp  autil_manager.cpp  autil_manager_private.hpp  autil_number.cpp  autil_obj.cpp  autil_osc.cpp  autil_osc_private.hpp  autil_pahost.cpp  autil_pahost_private.hpp  autil_parameter.cpp  autil_parameter_private.hpp  autil_parametermap.cpp  autil_str.cpp  (+4 more)
test/dsptest/: dsptest.cpp
test/gunit/: CMakeLists.txt  test_apu_api.cpp  test_apu_array.cpp  test_apu_obj_enum.cpp  test_apu_objmap.cpp  test_apu_parameter.cpp  test_apu_parametermap.cpp  test_apu_stringlist.cpp  test_apunumber.cpp  test_apuptr.cpp  test_apustring.cpp  test_audiomanager_api.cpp  test_thread_manager.cpp
